--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.name-letter{
+  height: 50px;
+  width: 50px;
+  background-color: teal;
+  border-radius: 50%;
+  text-align: center;
+  margin: 10px 40%;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.user-card{
+  margin: 20px 20px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.contact-posts{
+  display:flex;
+  flex-direction: column;
+  margin: 10px 20px;
+  border: transparent;
+  border-radius: 5px;
+  padding: 20px;
+  color: white;
+  background-color: teal;
+}
+.post-title{
+  text-decoration: underline;
 }
